# ossp

./: .gitignore  98-osscuse.rules  CMakeLists.txt  Makefile  README  ossp-alsap.c  ossp-padsp.c  ossp-slave.c  ossp-slave.h  ossp-util.c  ossp-util.h  ossp.c  ossp.h  osspd.c  osstest.c
.github/workflows/: build.yml
cmake/: ossp-util.cmake
